Changed Hello world with img and h2 to display simple profile data. Image file added in the folder images and used as resource in the img element in index.html file

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 
     </head>
     <body>
-        hello world
+        <div>
+            <img src="images/Vincentsius Herlambang Pandji Pradipto(1).png" alt="profile image" height="500">
+            <h2>Vincentsius Herlambang Pandji Pradipto</h2>
+         </div>
     </body>
 </html>
