--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div id = "header">Header</div>
         <div>
             <img src="images/Vincentsius Herlambang Pandji Pradipto(1).png" alt="profile image" height="500">
             <h2>Vincentsius Herlambang Pandji Pradipto</h2>
