added new div as footer container with id = footer

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
             <img src="images/Vincentsius Herlambang Pandji Pradipto(1).png" alt="profile image" height="500">
             <h2>Vincentsius Herlambang Pandji Pradipto</h2>
          </div>
+         <div id="footer">Footer</div>
     </body>
 </html>
